--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/register.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="#{index.page.title}">Title</title>
 </head>
 <body>
 
@@ -29,11 +29,24 @@
 
 <a th:href="@{/student/welcome(id=${students.get(0).firstName})}">Link2</a>
 
-<!--Iteration-->
+<!--Iteration th:text will be to view after iteration-->
 
 <ul>
     <li th:each="student : ${students}" th:text="${student.firstName}"></li>
 </ul>
+
+
+<!--Conditional logic:-->
+
+<div th:text="${students.get(0).age > 25 ? 'ELIGIBLE' : 'NOT ELIGIBLE'}"></div>
+
+<div>
+    <span th:if="${students.get(0).getState() == 'Arizona'}">Arizona</span>
+    <span th:unless="${students.get(0).getState() == 'Arizona'}">Not Arizona</span>
+</div>
+
+
+
 
 
 
