--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" media="screen"
+      th:href="@{/css/bootstrap-4.1.3-dist/css/bootstrap.min.css}"/>
+
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/3.3.1/jquery.min.js"
+        th:src="@{/js/jquery-3.3.1.min.js}"></script>
+
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
+
 </head>
 <body>
+    <h1 class="display-1 text-danger">Welcome</h1>
 
-<h2>Welcome To Cydeo</h2>
+    <h1 class="cydeo">My Custom CSS</h1>
+
+    <img th:src="@{/images/welcome-38249.png}"/>
+
+    <div th:replace="/fragments/index :: footer-menu">Footer</div>
+    <div th:replace="/fragments/index :: main-menu">Main Menu</div>
 
 </body>
 </html>
